# statice

./: .env.example  .flake8  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  config.py  conftest.py  docker-compose.override.yml.example  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  statice.py
app/: __init__.py  cli.py  config.py  daemon.py  fake.py  handlers.py  jobs.py  models.py
app/admin/: __init__.py  forms.py  routes.py
app/admin/templates/: create_check.j2  delete_check.j2  edit_check.j2  manage_checks.j2
app/auth/: __init__.py  forms.py  routes.py
app/auth/templates/: login.j2
app/background/: __init__.py  daemon.py  jobs.py
app/checks/: __init__.py  forms.py  models.py  routes.py
app/checks/templates/: checks.html  checks.j2  delete_check.j2  (+8 more)
app/core/: __init__.py  routes.py
app/daemons/: inquisitor.py  janitor.py
app/dashboard/: __init__.py  routes.py
app/main/: __init__.py  routes.py
app/settings/: __init__.py  forms.py  routes.py
app/tasks/: __init__.py  inquisitor.py  janitor.py
app/templates/: 404.html  404.j2  _checks_table.html  _events_table.html  _inbound_table.html  _manage.html  _outbound_table.html  _settings_table.html  base.html  base.j2  checks.html  create_outbound_check.html  dashboard.html  delete_check.html  edit_check.html  macros.j2  settings.html
docker/app/: Dockerfile  entrypoint.sh
docker/workers/: Dockerfile  supervisord.conf
migrations/versions/: 000de653c6d3_.py  3457496a6fbd_.py  42e4bb8d47b4_.py  cdda2b97a6e5_.py  f010da5dae44_.py  f521bca423b3_.py  f74d279e4481_.py  fa433aada0cb_.py
scripts/: start_web.sh  start_workers.sh
tests/: test_admin_routes.py  test_create_check.py  test_dashboard.py  test_dashboard_routes.py  test_delete_check.py  test_edit_check.py  test_manage_checks.py  test_models.py  test_view_check.py
(+11 files in other folders)
