[tool.poetry]
name = "statice"
version = "0.1.0"
description = "A friendly status page"
authors = ["Avery Crespi <averycrespi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
flask-wtf = "^0.14.2"
flask-sqlalchemy = "^2.4.1"
flask-bootstrap = "^3.3.7"
requests = "^2.22.0"
flask-login = "^0.4.1"
flask-migrate = "^2.5.2"
flask-moment = "^0.9.0"
psycopg2 = "^2.8.4"
redis = "^3.4.0"
rq = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
