[tool.poetry]
name = "statice"
version = "0.1.0"
description = "A friendly status page"
authors = ["Avery Crespi <averycrespi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
flask-wtf = "^0.14.2"
flask-sqlalchemy = "^2.4.1"
requests = "^2.22.0"
flask-migrate = "^2.5.2"
flask-moment = "^0.9.0"
psycopg2 = "^2.8.4"
flask-rq2 = "^18.3"
arrow = "^0.15.5"
bootstrap-flask = "^1.2.0"
rq_scheduler = "^0.9.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.761"
bandit = "^1.6.2"
flake8 = "^3.7.9"
pytest-flask = "^0.15.1"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
